--- a/LojaVirtuall/LojaVirtuall.csproj
+++ b/LojaVirtuall/LojaVirtuall.csproj
@@ -151,6 +151,7 @@
     <Compile Include="Controllers\AdministradoresController.cs" />
     <Compile Include="Controllers\AutenticacaoController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
+    <Compile Include="Controllers\CarrinhoController.cs" />
     <Compile Include="Controllers\CategoriasController.cs" />
     <Compile Include="Controllers\ClientesController.cs" />
     <Compile Include="Controllers\FornecedoresController.cs" />
@@ -170,6 +171,7 @@
     <Compile Include="Models\Produto.cs" />
     <Compile Include="Models\Usuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\GestaoCarrinho.cs" />
     <Compile Include="Repositories\GestaoCookies.cs" />
     <Compile Include="Repositories\GestaoSessao.cs" />
     <Compile Include="Repositories\GestaoUsuarios.cs" />
@@ -478,6 +480,7 @@
     <Content Include="Views\Administradores\Register.cshtml" />
     <Content Include="Views\Clientes\ManageAccount.cshtml" />
     <Content Include="Views\Produtos\Search.cshtml" />
+    <Content Include="Views\Carrinho\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
